[gd_scene load_steps=6 format=3 uid="uid://dxn3kxv1jfr1l"]

[ext_resource type="Script" path="res://scenes/runtime/run.gd" id="1_2b8wr"]
[ext_resource type="Theme" uid="uid://obicqd30stvj" path="res://UI.tres" id="1_31j3y"]
[ext_resource type="Texture2D" uid="uid://40201clfx8jr" path="res://icon/TAB_256.png" id="3_ylpgx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fpwo"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wymv6"]
bg_color = Color(0, 0.6, 0, 1)
border_width_top = 5
border_width_right = 5
border_color = Color(0, 1, 0, 1)

[node name="run" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_31j3y")
script = ExtResource("1_2b8wr")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ylpgx")
stretch_mode = 5

[node name="BackgroundTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="View" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Interface" type="VBoxContainer" parent="View"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Output" type="RichTextLabel" parent="View/Interface"]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="Input" type="LineEdit" parent="View/Interface"]
layout_mode = 2
placeholder_text = "Enter Input"

[node name="ScrollContainter" type="ScrollContainer" parent="View"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
horizontal_scroll_mode = 0

[node name="Information" type="VBoxContainer" parent="View/ScrollContainter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Progress" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -393.0
offset_top = -13.0
offset_right = 393.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7fpwo")
theme_override_styles/fill = SubResource("StyleBoxFlat_wymv6")
max_value = 1000.0
rounded = true

[node name="parsing" type="Label" parent="Progress"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 16.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Parsing..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="View/Interface/Input" to="." method="_on_input_text_changed"]
[connection signal="text_submitted" from="View/Interface/Input" to="." method="_on_input_text_submitted"]
